Make some html changes

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,13 @@
-<h2>Hello {{name}}<h2>
+<div background-color="#fefefe">
+  <h2>{{name}}'s Site'<h2>
+</div>
+<br/>
+<div background-color="#dedede">
+  <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    <li>Item 4</li>
+    <li>Item 5</li>
+  </ul>
+</div>
